# bounded-intmap

./: LICENSE  README.md  bounded-intmap.cabal  index.html  params.json  report.html
benchmarks/: IntMapBench.hs  IntSet.hs  report.html
src/Data/: StrictPair.hs  WordMap.hs  WordSet.hs
src/Data/IntMap/: Bounded.hs
src/Data/IntMap/Bounded/: Base.hs  Lazy.hs  Strict.hs
src/Data/WordMap/: Base.hs  Internal.hs  Lazy.hs  Strict.hs
src/Data/WordMap/Merge/: Base.hs  Lazy.hs  Strict.hs
src/Data/WordSet/: Internal.hs
tests/: WordMap.hs
