Name:          bounded-intmap
Version:       0.1
Description:   A reimplementation of `Data.IntMap` that uses minimum and maximum bounds on subtrees instread of bit prefixes.
Author:        Jonathan S
License:       MIT
License-File:  LICENSE
Build-Type:    Simple
Cabal-Version: >=1.8

library
    HS-Source-Dirs:  src
    Build-Depends:   base, deepseq, bits-extras
    Exposed-modules: Data.WordMap, Data.WordMap.Base, Data.WordMap.Lazy, Data.WordSet, Data.WordSet.Internal, Data.IntMap.Bounded
    ghc-options:     -Wall

benchmark intmap
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: benchmarks
    Main-Is: IntMapBench.hs
    Build-Depends: base, containers, deepseq, criterion, bounded-intmap
    ghc-options:   -Wall

benchmark intset
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: benchmarks
    Main-Is: IntSet.hs
    Build-Depends: base, containers, deepseq, criterion, bounded-intmap
    ghc-options:   -Wall

test-suite wordmap
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: tests
    Main-Is: WordMap.hs
    Build-Depends: base, tasty, QuickCheck, tasty-quickcheck, tasty-hunit, bounded-intmap
    GHC-Options: -Wall
